syntax = "proto3";

import "graphql/ast/ast.proto";

// An encoded PluginRequest is written to the plugin's stdin.
message PluginRequest {
    // The .gqlc/.graphql files to generate.
    repeated string file_to_generate = 1;

    // The generator parameter passed on the command-line.
    string parameter = 2;

    // Documents are all the parsed documents to be generated.
    repeated Document documents = 3;
}

// The plugin writes an encoded PluginResponse to stdout.
message PluginResponse {
    // Error message. If non-empty code generation failed. The plugin
    // process should exit with status code zero even if it reports
    // an error in this way.
    //
    string error = 1;

    // Represents a single generated file.
    message File {
        // The file name, relative to the output directory. The name must not
        // contain "." or ".." components and must be relative, not be absolute (so,
        // the file cannot lie outside the output directory). "/" must be used as
        // the path separator, not "\".
        //
        string name = 1;

        // The file contents.
        string content = 15;
    }
    repeated File file = 2;
}